<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="107dp"
            android:gravity="center"
            android:text="@string/heading"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="186dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="104dp"
                android:layout_height="184dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:gravity="center"
                    android:text="@string/name"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:text="@string/id"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="235dp"
                android:layout_height="186dp"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextTextPersonName2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:ems="10"
                    android:hint="@string/hintname"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/editTextTextPersonName3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hintid"
                    android:inputType="textPersonName" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="341dp"
            android:layout_height="61dp"
            android:gravity="center"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="264dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:entries="@array/votinglist"
                android:gravity="center"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="339dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/toggleButton"
                android:layout_width="0.1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="ToggleButton"
                android:textOff="REFUSE"
                android:textOn="ACCEPT" />

            <Button
                android:id="@+id/buttonVote"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Vote" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="341dp"
            android:layout_height="42dp"
            android:gravity="center"
            android:orientation="vertical" />

        <Button
            android:id="@+id/button2"
            android:layout_width="341dp"
            android:layout_height="wrap_content"
            android:text="Back to main" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>